# leptos-mantine-example

./: .pre-commit-config.yaml  Cargo.toml  README.md  environment.yml  index.html
src/: lib.rs  main.rs
